examples/skaffold/web-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    io.kompose.network/roachnet: "true"
    app: web
  name: web
spec:
  containers:
    - image: web
      name: web
      ports:
        - name: app-port
          containerPort: 4000
      resources: {}
  hostname: web
  restartPolicy: OnFailure
status: {}
