examples/skaffold/roach1-service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: roach1
  name: roach1-headless
spec:
  ports:
    - name: "dashboard"
      port: 8080
      targetPort: 8080
    - name: "db-port"
      port: 26257
      targetPort: 26257
  selector:
    app: roach1
  clusterIP: None
