examples/skaffold/roach1-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: roach1
  name: roach1
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
    - name: "26257"
      port: 26257
      targetPort: 26257
  selector:
    io.kompose.service: roach1
status:
  loadBalancer: {}
