examples/skaffold/roach3-service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: roach1
  name: roach3
spec:
  selector:
    app: roach3
  clusterIP: None
