examples/skaffold/roachnet-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: roachnet
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/roachnet: "true"
  podSelector:
    matchLabels:
      io.kompose.network/roachnet: "true"
